secret content css

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+:root {
+  --b-radius: 0.3em;
+}
+
 html {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -27,14 +31,18 @@ input:focus {
   background: lightskyblue;
   color: #fff;
 }
+input::placeholder {
+  color: rgb(191, 222, 252);
+}
 
 button {
   cursor: pointer;
   transition: all 0.2s ease-in-out;
   border: 1px solid lightskyblue;
   background: transparent;
-  border-radius: 0.3em;
+  border-radius: var(--b-radius);
   padding: 0.2em 1em;
+  color: deepskyblue;
 }
 button:hover {
   color: #ffff;
@@ -51,7 +59,7 @@ button:hover {
   padding: 1em;
 }
 .login {
-  border-radius: 0.8em;
+  border-radius: var(--b-radius);
   border: 1px solid lightskyblue;
 }
 .login form > * {
@@ -61,7 +69,14 @@ button:hover {
   cursor: pointer;
 }
 .secret-content img {
+  justify-content: center;
   width: 100%;
+  margin-bottom: 2em;
+}
+
+.secret-content .actions-container {
+  justify-content: space-between;
+  padding: 1em 0;
 }
 
 /* helper functions */
@@ -71,4 +86,8 @@ button:hover {
 
 .hide {
   display: none;
+}
+
+.debug {
+  border: 1px solid yellowgreen;
 }
