--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ a {
   border-radius: 0.8em;
   transition: all 0.5s ease-in-out;
   transform: translateX(150%);
-  color: #f3f3f3;
+  color: #fff;
 }
 
 .user-msg.open {
